--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amábilly & Gabriel - 29 de Junho de 2024</title>
+    <title>Lara & Filipi - 26 de Junho de 2026</title>
     <meta name="description" content="Celebre conosco nas suas linhas em que nos encontramos" />
     <meta name="author" content="Amábilly & Gabriel" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
