atualização das datas e imagens

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="author" content="Amábilly & Gabriel" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/the-seasons" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/beautifully-delicious-script" rel="stylesheet">
 
     <meta property="og:title" content="Amábilly & Gabriel - 29 de Junho de 2024" />
     <meta property="og:description" content="Celebre conosco nas suas linhas em que nos encontramos" />
