--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lara & Filipi - 26 de Junho de 2026</title>
+    <title>Lara & Filipi - 05 de Julho de 2026</title>
     <meta name="description" content="Celebre conosco nas suas linhas em que nos encontramos" />
-    <meta name="author" content="Amábilly & Gabriel" />
+    <meta name="author" content="Lara & Filipi" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/the-seasons" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/beautifully-delicious-script" rel="stylesheet">
 
-    <meta property="og:title" content="Amábilly & Gabriel - 29 de Junho de 2024" />
+    <meta property="og:title" content="Lara & Filipi - 05 de Julho de 2026" />
     <meta property="og:description" content="Celebre conosco nas suas linhas em que nos encontramos" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
